--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,12 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <link href="/favicon.ico" rel="shortcut icon" />
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
   <meta content="#000000" name="theme-color" />
-
+  
+  <link rel="stylesheet" href="/fonts/fonts.css">
   <title>MSU Manager</title>
 </head>
 
